feat(user): Booking seats
